--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="callback"
+            type="com.appculinaryrecipes.AuthActivity" />
+    </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -43,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/editTextPassword"
             android:layout_centerInParent="true"
+            android:onClick='@{() -> callback.onSubmit()}'
             android:text="Sign In"/>
 
     </RelativeLayout>
