--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -39,7 +39,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="270dp"
                 android:layout_marginEnd="20dp"
-                android:hint="username"
+                android:hint="email"
                 app:boxBackgroundColor="@color/white"
                 app:startIconDrawable="@drawable/user">
 
@@ -121,7 +121,8 @@
                 android:text="Create an account"
                 android:textAlignment="center"
                 android:textColor="#ae0216"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="italic" />
         </RelativeLayout>
 
 </layout>
