--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
             android:background="@drawable/rounded"
             android:elevation="16dp"
             android:padding="8dp"
-            app:cnb_menuResource="@menu/menu_bottom"/>
+            app:cnb_menuResource="@menu/menu_bottom"
+            app:cnb_unselectedColor="@color/white"/>
 
         <TextView
             android:id="@+id/testText"
