--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -16,7 +16,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textField"
+            android:id="@+id/textField4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -25,6 +25,31 @@
 
             android:layout_marginStart="20dp"
             android:layout_marginTop="270dp"
+            android:layout_marginEnd="20dp"
+            android:hint="fullname"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/idcard">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inputFullnameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView"
+                android:layout_centerHorizontal="true"
+
+                android:inputType="textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textField4"
+            android:layout_alignParentStart="true"
+
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="20dp"
             android:hint="email"
             app:boxBackgroundColor="@color/white"
