--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -5,55 +5,60 @@
     android:layout_height="match_parent"
     tools:context=".RecipeFragment">
 
-    <RelativeLayout
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/addRecipeLayout"
+        android:orientation="vertical"
         android:padding="20dp">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editTextMeal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="60dp"
         android:ems="10"
         android:inputType="text"
         android:hint="recipe name"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="60dp"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="category"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="category"
+            android:inputType="text" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextTags"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="tags"
+            android:inputType="text" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextMealThumb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Thumbnail picture"
+            android:inputType="text" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextYoutube"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
             android:ems="10"
             android:inputType="text"
             android:hint="youtube"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextInstructions"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
             android:ems="10"
             android:lines="10"
             android:inputType="textMultiLine"
@@ -61,28 +66,34 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextArea"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="340dp"
-            android:ems="10"
             android:hint="area"
             android:inputType="text" />
+
+        <Button
+            android:id="@+id/addIngredientButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add ingredient"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/addIngredientsLayout">
+
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/addRecipeSubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="500dp"
-            android:layout_marginEnd="200dp"
             android:text="Submit" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
