--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".RecipeFragment">
+        tools:context=".RecipeFragment"
+        android:background="#ffefef">
 
         <TextView
             android:id="@+id/titleRecipe"
@@ -20,25 +21,26 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="80dp"
             android:fontFamily="@font/dongle_regular"
             android:textAlignment="center"
             android:textColor="#ae0216"
             android:textSize="60sp" />
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageRecipe"
-            android:layout_width="300dp"
+            android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_below="@+id/titleRecipe"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
-            android:src="@drawable/googleg_standard_color_18" />
-
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="80dp"
+            android:adjustViewBounds="true"
+            android:scaleType="center"
+            app:shapeAppearanceOverlay="@style/roundimageview" />
 
     </RelativeLayout>
 </layout>
