--- a/app/src/main/res/layout/item_home_recipe.xml
+++ b/app/src/main/res/layout/item_home_recipe.xml
@@ -8,7 +8,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#ffefef">
             <ImageView
                 android:layout_width="96dp"
                 android:layout_height="96dp"
