--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -13,34 +13,48 @@
         tools:context=".RecipeFragment"
         android:background="#ffefef">
 
-        <TextView
-            android:id="@+id/titleRecipe"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="80dp"
-            android:fontFamily="@font/dongle_regular"
-            android:textAlignment="center"
-            android:textColor="#ae0216"
-            android:textSize="60sp" />
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageRecipe"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_below="@+id/titleRecipe"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="80dp"
-            android:adjustViewBounds="true"
-            android:scaleType="center"
-            app:shapeAppearanceOverlay="@style/roundimageview" />
+            <LinearLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/titleRecipe"
+                    android:layout_width="200dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="80dp"
+                    android:fontFamily="@font/dongle_regular"
+                    android:textAlignment="center"
+                    android:textColor="#ae0216"
+                    android:textSize="60sp" />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/imageRecipe"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="80dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="center"
+                    app:shapeAppearanceOverlay="@style/roundimageview" />
+            </LinearLayout>
+        </ScrollView>
 
     </RelativeLayout>
 </layout>
