--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
-        android:background="#ffefef">
+        android:background="@drawable/background_all_acivity">
 
         <com.ismaeldivita.chipnavigation.ChipNavigationBar
-            android:layout_width="match_parent"
             android:id="@+id/navigationBar"
+            android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_alignParentTop="true"
             android:background="@drawable/rounded"
             android:elevation="16dp"
             android:padding="8dp"
             app:cnb_menuResource="@menu/menu_bottom"
-            app:cnb_unselectedColor="@color/white"/>
+            app:cnb_unselectedColor="@color/white" />
 
         <FrameLayout
             android:id="@+id/fragmentHomeContainer"
