--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -14,6 +14,7 @@
         android:background="#ffefef">
 
         <ScrollView
+            android:background="@drawable/background_all_acivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
@@ -31,9 +32,7 @@
                     android:id="@+id/titleRecipe"
                     android:layout_width="200dp"
                     android:layout_height="70dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center"
                     android:layout_marginStart="80dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="80dp"
@@ -44,15 +43,19 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/imageRecipe"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="300dp"
+                    android:padding="5dp"
+                    android:layout_height="250dp"
                     android:layout_gravity="center"
-                    android:layout_marginStart="80dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="80dp"
                     android:adjustViewBounds="true"
-                    android:scaleType="center"
-                    app:shapeAppearanceOverlay="@style/roundimageview" />
+                    app:shapeAppearanceOverlay="@style/roundimageview"
+                    />
+
+<!--            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
+<!--                    android:id="@+id/videoView"-->
+<!--                    app:showFullScreenButton="true"-->
+<!--                    android:layout_width="200dp"-->
+<!--                    android:layout_height="200dp" />-->
             </LinearLayout>
         </ScrollView>
 
