--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
             android:padding="20dp"
             tools:context=".FragmentLogin"
-            android:background="#ffefef">
+            android:background="@drawable/background_login">
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/signInButton"
