--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,11 @@
         <item name="cornerSize">35dp</item>
         <item name="color">@color/white</item>
     </style>
+
+    <style name="MyRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:minHeight">5dp</item>
+        <item name="android:maxHeight">7dp</item>
+        <item name="colorControlNormal">#E6B728</item>
+        <item name="colorControlActivated">#E6B728</item>
+    </style>
 </resources>
