--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -4,7 +4,7 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeFragment">
+    tools:context=".fragments.RecipeFragment">
 
     <ScrollView
         android:layout_width="fill_parent"
