--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -6,14 +6,14 @@
         <data>
             <variable
                 name="callback"
-                type="com.appculinaryrecipes.FragmentLogin" />
+                type="com.appculinaryrecipes.fragments.FragmentLogin" />
         </data>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
-            tools:context=".FragmentLogin"
+            tools:context=".fragments.FragmentLogin"
             android:background="@drawable/background_login">
 
             <com.google.android.gms.common.SignInButton
