--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -5,14 +5,14 @@
     <data>
         <variable
             name="callback"
-            type="com.appculinaryrecipes.FragmentRegister" />
+            type="com.appculinaryrecipes.fragments.FragmentRegister" />
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        tools:context=".FragmentRegister"
+        tools:context=".fragments.FragmentRegister"
         android:background="@drawable/background_register">
 
 
