--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:id="@+id/navigationBar"
             android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/background_instruction"
             android:elevation="16dp"
             android:padding="8dp"
@@ -23,38 +23,8 @@
             android:id="@+id/fragmentHomeContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/navigationBar"
-            />
-
-        <!--        <TextView-->
-<!--            android:id="@+id/testText"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_above="@+id/logout"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_marginEnd="150dp"-->
-<!--            android:layout_marginBottom="200dp"-->
-<!--            android:text="Hello World!"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/logout"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginEnd="130dp"-->
-<!--            android:layout_marginBottom="0dp"-->
-<!--            android:text="Logout"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent" />-->
-
-
-
+            android:layout_above="@+id/navigationBar"
+            android:layout_marginBottom="0dp" />
 
     </RelativeLayout>
 </layout>
