--- a/app/src/main/res/layout/item_home_recipe.xml
+++ b/app/src/main/res/layout/item_home_recipe.xml
@@ -60,17 +60,19 @@
 
                     <RatingBar
                         android:id="@+id/rating"
-                        style="@android:attr/ratingBarStyleSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:scaleX=".5"
-                        android:scaleY=".5"
+                        android:numStars="10"
+                        android:stepSize="1"
+                        android:scaleX=".6"
+                        android:scaleY=".6"
+                        android:theme="@style/MyRatingBar"
 
                         android:paddingBottom="0dp"
                         android:transformPivotX="0dp"
-                        android:transformPivotY="0dp"
-                        android:isIndicator="true"
-                        android:max="5" />
+                        android:transformPivotY="30dp"
+                        android:isIndicator="false"
+                        />
 
                 </TableRow>
 
