--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -28,7 +28,11 @@
             android:layout_marginTop="270dp"
             android:layout_marginEnd="20dp"
             android:hint="fullname"
+
+            app:startIconTint="@color/own_red"
+            android:textColorHint="@color/own_red"
             app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             app:boxCornerRadiusBottomStart="25dp"
             app:boxCornerRadiusBottomEnd="25dp"
             app:boxCornerRadiusTopEnd="25dp"
@@ -49,6 +53,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textField"
             app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             app:boxCornerRadiusBottomStart="25dp"
             app:boxCornerRadiusBottomEnd="25dp"
             app:boxCornerRadiusTopEnd="25dp"
@@ -63,6 +68,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:hint="email"
+            app:startIconTint="@color/own_red"
+            android:textColorHint="@color/own_red"
             app:boxBackgroundColor="@color/white"
             app:startIconDrawable="@drawable/user">
 
@@ -79,6 +86,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textField2"
             app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             app:boxCornerRadiusBottomStart="25dp"
             app:boxCornerRadiusBottomEnd="25dp"
             app:boxCornerRadiusTopEnd="25dp"
@@ -92,6 +100,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:hint="password"
+            app:startIconTint="@color/own_red"
+            android:textColorHint="@color/own_red"
             app:boxBackgroundColor="@color/white"
             app:endIconMode="password_toggle"
             app:startIconDrawable="@drawable/padlock">
@@ -111,6 +121,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textField3"
             app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             app:boxCornerRadiusBottomStart="25dp"
             app:boxCornerRadiusBottomEnd="25dp"
             app:boxCornerRadiusTopEnd="25dp"
@@ -124,6 +135,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:hint="confirm password"
+            app:startIconTint="@color/own_red"
+            android:textColorHint="@color/own_red"
             app:boxBackgroundColor="@color/white"
             app:endIconMode="password_toggle"
             app:startIconDrawable="@drawable/padlock">
