Fix ui of fragment to create recipe

--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -30,7 +30,7 @@
                 android:textSize="60sp"
                 android:textColor="@color/own_red"
                 android:gravity="center"/>
-                <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -43,7 +43,9 @@
                     app:boxCornerRadiusBottomStart="25dp"
                     app:boxCornerRadiusTopEnd="25dp"
                     app:boxCornerRadiusTopStart="25dp"
-                    >
+                    app:startIconDrawable="@drawable/recipe_name"
+                    app:startIconTint="@color/own_red"
+                >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextMeal"
@@ -66,7 +68,9 @@
                     app:boxCornerRadiusBottomStart="25dp"
                     app:boxCornerRadiusTopEnd="25dp"
                     app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp">
+                    app:boxStrokeWidth="0dp"
+                    app:startIconDrawable="@drawable/category"
+                    app:startIconTint="@color/own_red">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextCategory"
@@ -89,7 +93,9 @@
                     app:boxCornerRadiusBottomStart="25dp"
                     app:boxCornerRadiusTopEnd="25dp"
                     app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp">
+                    app:boxStrokeWidth="0dp"
+                    app:startIconDrawable="@drawable/image"
+                    app:startIconTint="@color/own_red">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextMealThumb"
@@ -112,7 +118,9 @@
                     app:boxCornerRadiusBottomStart="25dp"
                     app:boxCornerRadiusTopEnd="25dp"
                     app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp">
+                    app:boxStrokeWidth="0dp"
+                    app:startIconDrawable="@drawable/film"
+                    app:startIconTint="@color/own_red">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextYoutube"
@@ -160,7 +168,9 @@
                     app:boxCornerRadiusBottomStart="25dp"
                     app:boxCornerRadiusTopEnd="25dp"
                     app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp">
+                    app:boxStrokeWidth="0dp"
+                    app:startIconDrawable="@drawable/area"
+                    app:startIconTint="@color/own_red">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editTextArea"
@@ -175,6 +185,7 @@
                     android:id="@+id/imageViewUpload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -194,6 +205,23 @@
                     android:src="@drawable/add_image"
                     android:textColor="@color/white" />
 
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/addRecipeSubmitButton"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="18dp"
+                    android:layout_toStartOf="@+id/addIngredientButton"
+                    android:layout_toEndOf="@+id/loadImageButton"
+                    android:background="@drawable/button_login"
+                    android:src="@drawable/save"
+                    android:text="@string/submit"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/addIngredientButton"
                     android:layout_width="60dp"
@@ -206,10 +234,9 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/button_login"
-                    android:src="@drawable/add" />
+                    android:src="@drawable/ingredients" />
 
             </RelativeLayout>
-
             <LinearLayout
                 android:id="@+id/addIngredientsLayout"
                 android:layout_width="wrap_content"
@@ -217,53 +244,44 @@
                 android:orientation="vertical"
                 app:backgroundTint="#ae0216" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editTextYoutubeInputLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="0dp"
+                    android:hint="search"
+                    app:hintTextColor="@color/own_red"
+                    app:boxBackgroundColor="@color/white"
+                    app:boxCornerRadiusBottomEnd="25dp"
+                    app:boxCornerRadiusBottomStart="25dp"
+                    app:boxCornerRadiusTopEnd="25dp"
+                    app:boxCornerRadiusTopStart="25dp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
+                    app:startIconDrawable="@drawable/yt_search"
+                    app:startIconTint="@color/own_red">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/editTextYoutubeInputLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="50dp"
-                        android:hint="search"
-                        app:boxBackgroundColor="@color/white"
-                        app:boxCornerRadiusBottomEnd="25dp"
-                        app:boxCornerRadiusBottomStart="25dp"
-                        app:boxCornerRadiusTopEnd="25dp"
-                        app:boxCornerRadiusTopStart="25dp"
-                        app:boxStrokeWidth="0dp">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextSearchOnYoutube"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:ems="50"
+                        android:imeOptions="actionSearch"
+                        android:inputType="text" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/editTextSearchOnYoutube"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:ems="50"
-                            android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/searchButton"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@drawable/yt_search"
-                        android:gravity="center"
-                        app:backgroundTint="#ae0216" />
-
-                </RelativeLayout>
+            </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/youtubeVideosLayout"
@@ -271,14 +289,6 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:paddingTop="20dp" />
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/addRecipeSubmitButton"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:text="@string/submit"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:background="@drawable/button_login" />
 
 
         </LinearLayout>
