Fix bugs and add field in register "favourites", this array is null on sign up

--- a/app/src/main/res/layout/item_home_recipe.xml
+++ b/app/src/main/res/layout/item_home_recipe.xml
@@ -71,7 +71,10 @@
                         android:paddingBottom="0dp"
                         android:transformPivotX="0dp"
                         android:transformPivotY="30dp"
-                        android:isIndicator="false"
+                        android:isIndicator="true"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         />
 
                 </TableRow>
