--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,12 +21,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:weightSum="1">
+                    android:weightSum="0">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="0dp"
                         android:layout_weight="0.35"
                         android:gravity="center"
                         android:text="@string/textViewArea"
@@ -35,7 +35,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="30dp"
                         android:layout_weight="0.35"
                         android:gravity="center"
                         android:text="@string/textviewCategory"
@@ -70,14 +70,14 @@
 
                     <Button
                         android:id="@+id/button_search"
-                        android:layout_width="0dp"
+                        android:layout_width="20dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.22"
                         android:drawableStart="@android:drawable/ic_menu_search"
                         android:text="Search"
                         android:textSize="12dp"
                         android:textColor="@color/white"
-                        android:background="#AE0216"
+                        android:background="@drawable/button_login"
                         />
                 </TableRow>
 
@@ -85,26 +85,11 @@
             </TableLayout>
 
 
-<!--            <org.angmarch.views.NiceSpinner-->
-<!--                android:id="@+id/area_spinner"-->
-<!--                android:layout_width="200dp"-->
-<!--                android:layout_height="50dp"/>-->
-
-
-<!--            <org.angmarch.views.NiceSpinner-->
-<!--                android:id="@+id/category_spinner"-->
-<!--                android:layout_width="200dp"-->
-<!--                android:layout_height="50dp"/>-->
-
-<!--            <Button-->
-<!--                android:id="@+id/button_search"-->
-<!--                android:layout_width="200dp"-->
-<!--                android:layout_height="50dp" />-->
-
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/searchSwipeRefreshLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingTop="10dp">
 
 
                             <androidx.recyclerview.widget.RecyclerView
