--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -60,31 +60,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:hint="category"
-                    app:boxStrokeWidthFocused="0dp"
-                    android:textColorHint="@color/own_red"
-                    app:boxBackgroundColor="@color/white"
-                    app:boxCornerRadiusBottomEnd="25dp"
-                    app:boxCornerRadiusBottomStart="25dp"
-                    app:boxCornerRadiusTopEnd="25dp"
-                    app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp"
-                    app:startIconDrawable="@drawable/category"
-                    app:startIconTint="@color/own_red">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editTextCategory"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:ems="50"
-                        android:inputType="text" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:hint="meal thumbnail"
                     app:boxStrokeWidthFocused="0dp"
                     android:textColorHint="@color/own_red"
@@ -152,39 +127,92 @@
                         android:ems="10"
                         android:inputType="textMultiLine"
                         android:lines="10" />
-
                 </com.google.android.material.textfield.TextInputLayout>
 
+            <org.angmarch.views.NiceSpinner
+                android:id="@+id/categorySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="area"
-                    app:boxStrokeWidthFocused="0dp"
-                    android:textColorHint="@color/own_red"
-                    app:boxBackgroundColor="@color/white"
-                    app:boxCornerRadiusBottomEnd="25dp"
-                    app:boxCornerRadiusBottomStart="25dp"
-                    app:boxCornerRadiusTopEnd="25dp"
-                    app:boxCornerRadiusTopStart="25dp"
-                    app:boxStrokeWidth="0dp"
-                    app:startIconDrawable="@drawable/area"
-                    app:startIconTint="@color/own_red">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editTextArea"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:ems="50"
-                        android:inputType="text" />
-
-                </com.google.android.material.textfield.TextInputLayout>
+            <org.angmarch.views.NiceSpinner
+                android:id="@+id/areaSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                />
 
                 <ImageView
                     android:id="@+id/imageViewUpload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add ingredients"
+                android:fontFamily="@font/dongle_regular"
+                android:textSize="40sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/own_red"
+                android:gravity="center"/>
+
+            <org.angmarch.views.NiceSpinner
+                android:id="@+id/ingredientsSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addIngredientButton1"
+                    android:layout_width="120dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:text="chosen"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/own_red"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addIngredientButton2"
+                    android:layout_width="120dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_toEndOf="@+id/addIngredientButton1"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="50dp"
+                    android:text="empty"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/own_red"/>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/addIngredientsLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:backgroundTint="#ae0216" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -196,7 +224,6 @@
                     android:layout_height="60dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
-
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="50dp"
                     android:layout_marginLeft="50dp"
@@ -211,10 +238,11 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="18dp"
+                    android:layout_marginStart="95dp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="18dp"
-                    android:layout_toStartOf="@+id/addIngredientButton"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginRight="50dp"
                     android:layout_toEndOf="@+id/loadImageButton"
                     android:background="@drawable/button_login"
                     android:src="@drawable/save"
@@ -222,27 +250,7 @@
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/addIngredientButton"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginRight="50dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/button_login"
-                    android:src="@drawable/ingredients" />
-
             </RelativeLayout>
-            <LinearLayout
-                android:id="@+id/addIngredientsLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:backgroundTint="#ae0216" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
