wyswietlona lista ulubionych
+zmiana przechowywania ulubionych w bazie danych, zeby działało trzeba zarejestrowac nowego uzytkownika

--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -35,7 +35,7 @@
         app:cnb_textColor="#ffefef"
         />
     <item
-        android:id="@+id/favorites"
+        android:id="@+id/favourites"
         android:title=""
         android:icon="@drawable/heart"
         app:cnb_backgroundColor="#ae0216"
