--- a/app/src/main/res/layout/fragment_fridge.xml
+++ b/app/src/main/res/layout/fragment_fridge.xml
@@ -6,7 +6,8 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FridgeFragment">
+    tools:context=".fragments.FridgeFragment"
+    android:background="@drawable/background_all_acivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,9 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <LinearLayout
                 android:backgroundTint="@color/white"
-                android:id="@+id/yourIngredients"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -35,11 +36,14 @@
                     android:text="Find recipes"
                     android:textSize="12dp"
                     android:textColor="@color/white"
-                    android:background="@color/own_red"/>
+                    android:background="@drawable/button_login"/>
 
                 <TextView
                     android:text="Your ingredients"
-                    android:textSize="25dp"
+                    android:textSize="35sp"
+                    android:gravity="center"
+                    android:textColor="@color/own_red"
+                    android:fontFamily="@font/dongle_regular"
                     android:textStyle="italic"
                     android:layout_marginStart="80dp"
                     android:layout_marginTop="10dp"
@@ -49,6 +53,27 @@
                     android:layout_height="match_parent"/>
 
             </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="center"
+                >
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:background="#ffefef"
+                        android:padding="5dp"
+                        android:orientation="vertical"
+                        android:id="@+id/yourIngredients"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </ScrollView>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,7 +82,10 @@
 
                 <TextView
                     android:text="All ingredients"
-                    android:textSize="25dp"
+                    android:textSize="35sp"
+                    android:gravity="center"
+                    android:textColor="@color/own_red"
+                    android:fontFamily="@font/dongle_regular"
                     android:textStyle="italic"
                     android:layout_marginStart="80dp"
                     android:layout_marginTop="10dp"
@@ -75,33 +103,44 @@
                         android:layout_height="match_parent"
                         android:gravity="center">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/containsEditText"
-                            android:layout_width="170dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginEnd="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:inputType="text"
-                            android:textColor="@color/own_red"
-                            android:background="@color/white"
-                            android:hint="contains"
-                            />
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:orientation="horizontal">
 
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/containsButton"
-                            android:layout_width="60dp"
-                            android:textColor="@color/white"
-                            android:background="@color/own_red"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginEnd="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_height="match_parent"
-                            android:text="@string/search"
-                            app:cornerRadius="10dp"
-                            />
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/editTextYoutubeInputLayout"
+                                android:layout_width="250dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="0dp"
+                                android:hint="search"
+                                app:hintTextColor="@color/own_red"
+                                app:boxBackgroundColor="@color/white"
+                                app:boxCornerRadiusBottomEnd="25dp"
+                                app:boxCornerRadiusBottomStart="25dp"
+                                app:boxCornerRadiusTopEnd="25dp"
+                                app:boxCornerRadiusTopStart="25dp"
+                                app:boxStrokeWidth="0dp"
+                                app:boxStrokeWidthFocused="0dp"
+                                app:startIconDrawable="@drawable/yt_search"
+                                app:startIconTint="@color/own_red">
+
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/containsEditText"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:ems="50"
+                                    android:imeOptions="actionSearch"
+                                    android:inputType="text" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                        </RelativeLayout>
 
                         <org.angmarch.views.NiceSpinner
                             android:id="@+id/sortingSpinner"
@@ -116,12 +155,27 @@
                     </TableRow>
 
                 </TableLayout>
-
-                <LinearLayout
-                    android:id="@+id/fridgeView"
-                    android:orientation="vertical"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"
+                    >
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:background="#ffefef"
+                            android:padding="5dp"
+                            android:orientation="vertical"
+                            android:id="@+id/fridgeView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </ScrollView>
+                </androidx.cardview.widget.CardView>
 
 
             </LinearLayout>
