--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.SearchFragment"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background_all_acivity">
 
         <LinearLayout
             android:layout_height="match_parent"
